6678385: Random java.lang.StackOverflowError from various JDKs

Reviewed-by: stayer